--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+    <link rel="stylesheet" href="./css/main.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -65,8 +66,8 @@
                                     </div>
                                 </div>
                                 <div class="titles-item__border">
-                                    <h2 class="titles-item__name">Технокряк</h2>
-                                    <p class="titles-item__description">Веб-сайт</p>
+                                    <h2 class="titles-name">Технокряк</h2>
+                                    <p class="titles-description">Веб-сайт</p>
                                 </div>
                             </a>
                         </li>
@@ -80,8 +81,8 @@
                                     </div>
                                </div>
                                 <div class="titles-item__border">
-                                    <h2 class="titles-item__name">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-                                    <p class="titles-item__description">Дизайн</p>
+                                    <h2 class="titles-name">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                                    <p class="titles-description">Дизайн</p>
                                 </div>
                             </a>
                         </li>
@@ -95,8 +96,8 @@
                                     </div>
                                 </div>
                                 <div class="titles-item__border">
-                                    <h2 class="titles-item__name">Ресторан <span lang="en">Seafood</span></h2>
-                                    <p class="titles-item__description">Приложение</p>
+                                    <h2 class="titles-name">Ресторан <span lang="en">Seafood</span></h2>
+                                    <p class="titles-description">Приложение</p>
                                 </div>
                             </a>
                         </li>
@@ -110,8 +111,8 @@
                                     </div>
                                 </div>
                                 <div class="titles-item__border">
-                                    <h2 class="titles-item__name">Проект <span lang="en">Prime</span></h2>
-                                    <p class="titles-item__description">Маркетинг</p>
+                                    <h2 class="titles-name">Проект <span lang="en">Prime</span></h2>
+                                    <p class="titles-description">Маркетинг</p>
                                 </div>
                             </a>
                         </li>
@@ -125,8 +126,8 @@
                                     </div>
                                 </div>
                                 <div class="titles-item__border">
-                                    <h2 class="titles-item__name">Проект <span lang="en">Boxes</span></h2>
-                                    <p class="titles-item__description">Приложение</p>
+                                    <h2 class="titles-name">Проект <span lang="en">Boxes</span></h2>
+                                    <p class="titles-description">Приложение</p>
                                 </div>
                             </a>
                         </li>
@@ -140,8 +141,8 @@
                                 </div>
                                 </div>
                                 <div class="titles-item__border"> 
-                                    <h2 class="titles-item__name"><span lang="en">Inspiration has no Borders</span></h2>
-                                    <p class="titles-item__description">Веб-сайт</p>
+                                    <h2 class="titles-name"><span lang="en">Inspiration has no Borders</span></h2>
+                                    <p class="titles-description">Веб-сайт</p>
                                 </div>
                             </a>
                         </li>
@@ -155,8 +156,8 @@
                                     </div>
                                 </div>
                                 <div class="titles-item__border">
-                                    <h2 class="titles-item__name>Издание <span lang="en">Limited Edition</span></h2>
-                                    <p class="titles-item__description">Дизайн</p>
+                                    <h2 class="titles-name>Издание <span lang="en">Limited Edition</span></h2>
+                                    <p class="titles-description">Дизайн</p>
                                 </div>
                             </a>
                         </li>
@@ -170,8 +171,8 @@
                                     </div>
                                 </div>
                                 <div class="titles-item__border">
-                                    <h2 class="titles-item__name">Проект <span lang="en">LAB</span></h2>
-                                    <p class="titles-item__description">Маркетинг</p>
+                                    <h2 class="titles-name">Проект <span lang="en">LAB</span></h2>
+                                    <p class="titles-description">Маркетинг</p>
                                 </div>
                             </a>
                         </li>
@@ -185,8 +186,8 @@
                                     </div>
                                 </div>
                                 <div class="titles-item__border">
-                                    <h2 class="titles-item__name"><span lang="en">Growing Business</span></h2>
-                                    <p class="titles-item__description">Приложение</p>
+                                    <h2 class="titles-name"><span lang="en">Growing Business</span></h2>
+                                    <p class="titles-description">Приложение</p>
                                 </div>
                             </a>
                         </li>
