--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 
                 <a href="mailto:info@devstudio.com" class="contacts"> 
                     <svg class="contacts__icon contacts__icon_envelope">
-                    <use href="./images/icons.svg#icon-contacts__icon_envelope"></use>
+                    <use href="./images/icons.svg#icon-envelope"></use>
                 </svg>
                 info@devstudio.com</a></li>
             <li class="header-contacts__item">
