--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <nav class="header-nav-container">
                     <a href="./index.html" lang="en" class="logo"><span class="logo__span">Web</span>Studio</a>
                     <ul class="nav-menu">
-                            <li class="nav-menu__item nav-menu__item-location"><a href="./index.html" class="nav-menu_link nav-menu_link-current">Студия</a></li>
-                            <li class="nav-menu__item"><a href="./portfolio.html" class="nav-menu_link">Портфолио</a></li>
-                            <li class="nav-menu__item"><a href="" class="nav-menu_link">Контакты</a></li>
+                            <li class="nav-menu__item nav-menu__item-location"><a href="./index.html" class="nav-menu__link nav-menu__link-current">Студия</a></li>
+                            <li class="nav-menu__item"><a href="./portfolio.html" class="nav-menu__link">Портфолио</a></li>
+                            <li class="nav-menu__item"><a href="" class="nav-menu__link">Контакты</a></li>
                     </ul>
             </nav>
             <ul class="header-contacts">
