--- a/portfolio.html
+++ b/portfolio.html
@@ -18,9 +18,9 @@
             <nav class="header-nav-container">
                 <a href="./index.html" lang="en" class="logo"><span class="logo__span">Web</span>Studio</a>
                     <ul class="nav-menu">
-                            <li class="nav-menu__item nav-menu__item-location"><a href="./index.html" class="nav-menu_link" >Студия</a></li>
-                            <li class="nav-menu__item"><a href="./portfolio.html" class="nav-menu_link nav-menu_link-current" >Портфолио</a></li>
-                            <li class="nav-menu__item"><a href="" class="nav-menu_link">Контакты</a></li>
+                            <li class="nav-menu__item nav-menu__item-location"><a href="./index.html" class="nav-menu__link" >Студия</a></li>
+                            <li class="nav-menu__item"><a href="./portfolio.html" class="nav-menu__link nav-menu__link-current" >Портфолио</a></li>
+                            <li class="nav-menu__item"><a href="" class="nav-menu__link">Контакты</a></li>
                     </ul>
             </nav>
             <ul class="header-contacts">
@@ -28,7 +28,7 @@
                     
                     <a href="mailto:info@devstudio.com" class="contacts"> 
                         <svg class="contacts__icon contacts__icon_envelope">
-                        <use href="./images/icons.svg#icon-contacts__icon_envelope"></use>
+                        <use href="./images/icons.svg#icon-envelope"></use>
                     </svg>
                     info@devstudio.com</a></li>
                 <li class="header-contacts__item">
@@ -204,7 +204,7 @@
     <footer>
         <div class="container container_footer-flex">
             <div>
-                <a href="./index.html" lang="en" class="logo_logo-footer"><span class="logo__span">Web</span>Studio</a>
+                <a href="./index.html" lang="en" class="logo logo_logo-footer"><span class="logo__span">Web</span>Studio</a>
                 <address>
                     <ul class="footer-list">
                         <li class="footer-list__item"><a href="https://goo.gl/maps/t2Xy4N2QzywCHtQn9" target="_blank" rel="noopener noreferrer" class="footer-list__map">г. Киев, пр-т Леси Украинки, 26</a></li>
